BLOG: Fix author-card not respecting dark mode

--- a/src/blog/assets/css/darkmode.scss
+++ b/src/blog/assets/css/darkmode.scss
@@ -20,7 +20,7 @@
     }
 
     .single-post {
-        footer {
+        .author-card {
             @extend .bg-dark;
         }
     }
